ranking referral / origin

--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -695,6 +695,7 @@
         <div id="indications" class='tab_content'>
             <table id="grid_indications" class="bordered-table zebra-striped">
                 <thead>
+                    <th title="Tipo de relacionamento de indicação">Rel</th>
                     <th>Id</th>
                     <th>Nome</th>
                     <th>Data</th>
