fixing bug - two product fields in the same window

--- a/src/main/webapp/command_full/user_command_full.html
+++ b/src/main/webapp/command_full/user_command_full.html
@@ -3,6 +3,7 @@
   <script type="text/javascript" src='/js/default/animal.js'>
   </script>
   <script type="text/javascript" src="/js/user_command.js"></script>
+  <script type="text/javascript" src="/js/product_search2.js"></script>
   <script type="text/javascript">
   </script>
   <div class="well">
@@ -384,7 +385,7 @@
                     <div class="inline-inputs">
                       <div style="float:left; padding-right:10px" class="input-prepend">
                         <span class="add-on hide_mobile"><img width="16" src="/images/categorie.png"></span> 
-                        <input type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_search">
+                        <input type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_2search2">
                          <span class="hide_mobile help-block">Quantidade atual do produto em estoque</span>
                       </div>
                     </div>
