pt gift td giftid - deliverycontro giftid - pt obs - cheque duplicate

--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -77,7 +77,7 @@
                                 <input class="mini" id="external_id" name="external_id" size="30" type="text"/>
                           </div>
                         </div>
-                        <div class="clearfix lift:SecuritySnippet.isNotEgrexSystem ">
+                        <div class="clearfix">
                             <label for="obs">Observação</label>
                             <div class="input">
                                 <input class="large" id="obs" name="obs" size="30" type="textarea"/>
