--- a/src/main/webapp/financial_admin/payment_forms.html
+++ b/src/main/webapp/financial_admin/payment_forms.html
@@ -110,6 +110,13 @@
               </div>
             </div>         
             <div class="clearfix">
+                <label for="obs">Observação</label>
+                <div class="input">
+                    <input class="large" id="obs" name="obs" size="30" type="textarea"/>
+                    <span class="help-block">Observação</span>
+                </div>
+            </div>
+            <div class="clearfix">
               <label for="showAsFinOptions">Mostrar no Financeiro?</label>
               <div class="input">
                 <div class='inline-inputs'>
@@ -150,7 +157,7 @@
                   </div>
                 </div>             
                 <div class="clearfix">
-                  <label for="needCardInfo">Cartão?</label>       
+                  <label for="creditCard">Cartão?</label>       
                   <div class="input">
                     <div class='inline-inputs'>
                       <input name='creditCard'/> Solicita Dados?
@@ -253,6 +260,16 @@
                   <div class="input">
                     <div class='inline-inputs'>
                       <input name='budget'/>
+                      <span class="help-block"></span>
+                    </div>
+                  </div>
+                </div>            
+                <div class="clearfix">
+                  <label for="gift">Presente de outro cliente?</label>
+                  <div class="input">
+                    <div class='inline-inputs'>
+                      <input name='gift'/> Solicita Número?
+                      <input name='needGiftInfo'/>
                       <span class="help-block"></span>
                     </div>
                   </div>
