--- a/src/main/webapp/financial_admin/control_panel.html
+++ b/src/main/webapp/financial_admin/control_panel.html
@@ -12,8 +12,13 @@
       <div class="inline-inputs">
         <div class="input-prepend" style="float:left; padding-right:10px">
           <span class="add-on"><img src="/images/count.png" width="16"></span>
+          <input style="color:black;" class="small disabled" id="count_unique" name="count_unique" size="19" placeholder="0.00" type="text" disabled='true'>
+          <span class="help-block">Qtde únicos</span>
+        </div>
+        <div class="input-prepend" style="float:left; padding-right:10px">
+          <span class="add-on"><img src="/images/count.png" width="16"></span>
           <input style="color:black;" class="small disabled" id="count" name="count" size="19" placeholder="0.00" type="text" disabled='true'>
-          <span class="help-block">Qtde</span>
+          <span class="help-block">Qtde lanctos</span>
         </div>
         <div class="input-prepend" style="float:left; padding-right:10px">
           <span class="add-on"><img src="/images/money.png" width="16"></span>
