--- a/src/main/webapp/templates-hidden/calendar_true.html
+++ b/src/main/webapp/templates-hidden/calendar_true.html
@@ -289,7 +289,7 @@
               <label for="rapid_customer_obs">Obs</label>        
                <div class="input">
                   <div class='inline-inputs'>
-                      <input class="" id="rapid_customer_obs" name="rapid_customer_obs" size="30" type="textarea"/>
+                      <textarea class="" id="rapid_customer_obs" name="rapid_customer_obs" size="30"></textarea >
                   </div>
                </div>
             </div>           
