morning afternoon night - session control

--- a/src/main/webapp/financial_admin/session_status_report.html
+++ b/src/main/webapp/financial_admin/session_status_report.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" type="text/css" href="/select2/select2.css" />
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type="text/javascript">
-    google.load("visualization", "1", {packages:["corechart"]});
+//    google.load("visualization", "1", {packages:["corechart"]});
   </script>
   <script src="/select2/select2.js"></script><script src="/select2/select2_locale_pt-BR.js"></script>
   <script src="/js/reports.js"></script>
@@ -87,6 +87,8 @@
               <div class="inline-inputs">
                 <input class="url_parameter" name="quantity" id='quantity' type='checkbox' /> Mostra qtde
                 <input class="url_parameter" name="userbreak" id='userbreak' type='checkbox' /> Exibir <span data-i18n='Profissional'></span>
+                <span class="help-block">Mostrar número de vendas ao invés de valor / Exibir ou não o <span data-i18n='Profissional'></span></span>
+                <input class="local_storage" name="turnbreak" id='turnbreak' type='checkbox' /> Exibir Turno
                 <span class="help-block">Mostrar número de vendas ao invés de valor / Exibir ou não o <span data-i18n='Profissional'></span></span>
               </div>
             </div>
