ofx concil unit - cheque improvements

--- a/src/main/webapp/financial_admin/account_ofx_conciliation.html
+++ b/src/main/webapp/financial_admin/account_ofx_conciliation.html
@@ -516,8 +516,10 @@
             </label>
               <div class="input">
                 <div class="inline-inputs">
-                  <input class="local_storage url_parameter" name="show_conciliated" id='show_conciliated' type='checkbox' />
+                  <input class="local_storage url_parameter" name="show_conciliated" id='show_conciliated' type='checkbox' /> Verif Unidade
+                  <input class="local_storage url_parameter" name="verunit" id='verunit' type='checkbox' />
                   <span class="help-block">Mostrar lançamentos já conciliados/consolidados</span>
+                  <span class="help-block">Verifica unidade do ofx com a do financeiro</span>
                 </div>
               </div>
           </div>
