--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -571,42 +571,42 @@
                         </div>
                       </div>
                   </div>                     
-                  <div class="clearfix">
-                    <label for="name">Cheque</label>
-                     <div class="input">
-                        <div class="inline-inputs">
-                          <input class="xlarge" id="cheque_account" name="cheque_account" size="30" type="text"/>
-                        </div>
-                      </div>                
-                  </div>
-          <span class="cheque_data">
-            <div class="clearfix">
-              <label>Banco</label>
-                <div class="input">
-                  <div class="input-prepend">
-                    <select id="ch_bank" name="ch_bank" size="10">
-                    </select>
-                  </div>
-                </div>
-            </div>
-            <div class="clearfix">
-              <label>Número</label>
-                <div class="input">
-                  <div class='inline-inputs'>
-                    <div class="input-prepend">
-                      <input class="mini" id="ch_number" name="ch_number" size="10" type="text"/>
-                      <span class='label-inline'>Agência</span>
-                      <input class="small" id="ch_agency" name="ch_agency" size="10" type="text"/>
-                      <span class='label-inline'>Conta</span>
-                      <input class="small" id="ch_account" name="ch_account" size="10" type="text"/>
+                  <span class="cheque_data lift:SecuritySnippet.hasFinancialadModule">
+                    <!-- Não faz mais sentido verificar -->
+                    <div class="clearfix">
+                      <label for="name">Cheque</label>
+                       <div class="input">
+                          <div class="inline-inputs">
+                            <input class="xlarge" id="cheque_account" name="cheque_account" size="30" type="text"/>
+                          </div>
+                        </div>                
                     </div>
-                  </div>
-                </div>
-                <label style='float:left; padding-right:20px'></label>
-                  <span class="help-block">Número do cheque / agência / conta</span>
-            </div>          
-            <br/>
-          </span>          
+                    <div class="clearfix">
+                      <label>Banco</label>
+                        <div class="input">
+                          <div class="input-prepend">
+                            <select id="ch_bank" name="ch_bank" size="10">
+                            </select>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="clearfix">
+                      <label>Número</label>
+                        <div class="input">
+                          <div class='inline-inputs'>
+                            <div class="input-prepend">
+                              <input class="mini" id="ch_number" name="ch_number" size="10" type="text"/>
+                              <span class='label-inline'>Agência</span>
+                              <input class="small" id="ch_agency" name="ch_agency" size="10" type="text"/>
+                              <span class='label-inline'>Conta</span>
+                              <input class="small" id="ch_account" name="ch_account" size="10" type="text"/>
+                            </div>
+                          </div>
+                        </div>
+                        <label style='float:left; padding-right:20px'></label>
+                          <span class="help-block">Número do cheque / agência / conta</span>
+                    </div>          
+                  </span>          
                   <div class="clearfix">
                     <label for="exerciseDate">Data de Competência</label>
                       <div class="input">
