preventing product transfer from and to the same unit

--- a/src/main/webapp/product_admin/inventory.html
+++ b/src/main/webapp/product_admin/inventory.html
@@ -156,14 +156,14 @@
         <span  class="span12">
             <div class="clearfix">
               <label for="btn"></label>
-              <a class="btn primary" alt="Adiciona o produto na tabela de movimentações abaixo, após digitar toda a nota clique em <Salvar tudo>" type="button" id="b_add">
+              <a class="btn primary" title="Adiciona o produto na tabela de movimentações abaixo, após digitar toda a nota clique em Salvar tudo" type="button" id="b_add">
                 <img src="/images/add.png" width="16px">
                 Adicionar
               </a>
             </div>
             <div class="clearfix">
               <label for="btn"></label>
-              <a class="btn success b_save" alt="Efetiva todas as movimentações desde que já adicionadas na tabela" type="button" id="b_save" value="">
+              <a class="btn success b_save" title="Efetiva todas as movimentações desde que já adicionadas na tabela" type="button" id="b_save" value="">
                   <img src="/images/select.png" width="16px">
                   Salvar tudo
               </a>
@@ -197,7 +197,7 @@
             </table>          
             <div class="clearfix">
               <label for="btn"></label>
-              <a class="btn success b_save" alt="Efetiva todas as movimentações desde que já adicionadas na tabela" type="button" id="b_save" value="">
+              <a class="btn success b_save" title="Efetiva todas as movimentações desde que já adicionadas na tabela" type="button" id="b_save" value="">
                   <img src="/images/select.png" width="16px">
                   Salvar tudo
               </a>
