dttype for financial access, making a specific filed for commission report

--- a/src/main/webapp/financial_admin/sales_and_commission.html
+++ b/src/main/webapp/financial_admin/sales_and_commission.html
@@ -180,10 +180,10 @@
                 </div>
             </div>
             <div class="clearfix">
-              <label for="dttype">Tipo Data lanc</label>
+              <label for="dttype_commission">Tipo Data lanc</label>
                 <div class="input">
                   <div class="inline-inputs">
-                      <select class="local_storage" name="dttype" id="dttype">
+                      <select class="local_storage" name="dttype_commission" id="dttype_commission">
                           <option value='0'>Vencimento</option>
                           <option value='1'>Competência</option>
                           <option value='2'>Pagamento</option>
