--- a/src/main/webapp/financial/commission_report_multiple.html
+++ b/src/main/webapp/financial/commission_report_multiple.html
@@ -78,7 +78,7 @@
           userVal = userVal.substr(1);
         }
         var unitparm = $("#unit").val() || '0';
-        $.get("/accountpayable/list_user/"+startDate()+"/"+endDate()+"/"+unitparm+"/"+userVal+"/"+$("#dttype").val(),function(results){
+        $.get("/accountpayable/list_user/"+startDate()+"/"+endDate()+"/"+unitparm+"/"+userVal+"/"+$("#dttype_commission").val(),function(results){
               var hasUnitModule = $('.has-unit-module').length > 0;
               var ret = ""
               var payments = [];
@@ -185,10 +185,10 @@
               </div>
           </div>
           <div class="clearfix">
-            <label for="dttype">Tipo Data lanc</label>
+            <label for="dttype_commission">Tipo Data lanc</label>
               <div class="input">
                 <div class="inline-inputs">
-                    <select class="local_storage" name="dttype" id="dttype">
+                    <select class="local_storage" name="dttype_commission" id="dttype_commission">
                         <option value='0'>Vencimento</option>
                         <option value='1'>Competência</option>
                         <option value='2'>Pagamento</option>
