--- a/src/main/webapp/customer/ranking_indications.html
+++ b/src/main/webapp/customer/ranking_indications.html
@@ -91,7 +91,7 @@
         <div class="clearfix">
           <label for="maxcli">Limite Clientes</label>
           <div class="input">
-            <input id = "maxcli" name="maxcli" class="mini" type="text" value = "20"/>
+            <input id = "maxcli" name="maxcli" class="mini" type="number" value = "20"/>
             <span class="help-block">Quantidade limite de clientes no ranking</span>
           </div>
         </div>            
