--- a/src/main/webapp/financial_admin/account_conciliation.html
+++ b/src/main/webapp/financial_admin/account_conciliation.html
@@ -465,8 +465,8 @@
         <th>Saída</th>
         <th>Pago</th>
         <th>Editar Excluir_</th>
-        <th>Conciliar</th>
-        <th>Consolidar</th>
+        <th title='Conciliar'>Conc</th>
+        <th title='Consolidar'>Cons</th>
         <th title='Evolução do saldo conciliado/consolidado'>Saldo C</th>
         <th title='Evolução do saldo geral'>Saldo G</th>
       </thead>
