quiz question - domain table use

--- a/src/main/webapp/quiz/list_question.html
+++ b/src/main/webapp/quiz/list_question.html
@@ -37,6 +37,10 @@
 			<th>Seção</th>
 			<th>Ordem</th>
 			<th>Domínio</th>
+			<th>Pos</th>
+			<th>Tipo</th>
+			<th>Label</th>
+			<th>Tam</th>
 			<th>Observação</th>
 			<th>Ações</th>
 		</thead>
@@ -59,6 +63,18 @@
 				</td>
 				<td>
 					<f:quizdomainname></f:quizdomainname>
+				</td>
+				<td>
+					<f:quizpositionname></f:quizpositionname>
+				</td>
+				<td>
+					<f:quiztypename></f:quiztypename>
+				</td>
+				<td>
+					<f:quizformatname></f:quizformatname>
+				</td>
+				<td>
+					<f:quizsizename></f:quizsizename>
 				</td>
 				<td>
 					<f:obs></f:obs>
