status NoPaid - All except Paid and deleted

--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -109,6 +109,9 @@
                         <option value="All">
                           Todos, exceto excluído
                         </option>
+                        <option value="NoPaid">
+                          Todos, exceto pago e excluído
+                        </option>
                         <option value="7">
                           Pré Agendado
                         </option>
