--- a/src/main/webapp/financial_admin/control_panel.html
+++ b/src/main/webapp/financial_admin/control_panel.html
@@ -56,6 +56,8 @@
 			<th>Bom Para</th>
 			<th>Cliente</th>
 			<!--th>Recebido</th-->
+      <th>Obs</th>
+      <th>Audit</th>
 		</thead>
 		<tbody>
 		</tbody>
